# moonlight-qt

./: CMakeLists.txt
app/backend/: nvhttp.cpp
app/gui/: SettingsView.qml
app/settings/: streamingpreferences.cpp  streamingpreferences.h
app/streaming/: session.cpp
